k8s/be-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-server
spec:
  selector:
    app: server
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
