k8s/fe-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: server
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: server
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: server
        tier: frontend
        track: stable
    spec:
      containers:
      - name: nginx
        image: "fe-server2:latest"
        imagePullPolicy: Never
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
