k8s/sslingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - tripophiliacs.tk
    secretName: mycert
  rules:
    - host: tripophiliacs.tk
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend
            servicePort: 80
